--- a/AUTHORS
+++ b/AUTHORS
@@ -41,8 +41,9 @@ Docklet
 		: Mateusz Papiernik	<mati@mati.rm.pl>
 		: Igor Popik		<igipop@wsfiz.edu.pl>
 
-Dockapp		: emvi			<wamarek@poczta.onet.pl>
-		  Jaroslaw Wypychowski	<jarwyp@7bulls.com>
+Dockapp
+		: emvi			<wamarek@poczta.onet.pl>
+		: Jaroslaw Wypychowski	<jarwyp@7bulls.com>
 
 XOSD 		
 		: Marcin Krzy¿anowski	<krzak@linux.net.pl>
