--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+11.01.2004 - Released 2.0pre5
+
 11.01.2004
 - use username instead of 'Me' (option) (GUI/Thrull)
 - new tab in preferences... (Chat Window) (GUI/Thrull)
