really fixed segfault when resizing chat window in tabbed mode...

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,11 @@
+12.01.2004
+- really fixed segfault when resizing chat window in tabbed mode (GUI/THrull)
+
 11.01.2004 - Released 2.0pre5
 
 11.01.2004
-- use username instead of 'Me' (option) (GUI/Thrull)
-- new tab in preferences... (Chat Window) (GUI/Thrull)
+- use username instead of 'Me' (option) (GUI/THrull)
+- new tab in preferences... (Chat Window) (GUI/THrull)
 - memory management fixes, still needs some work though (sms/shasta)
 
 10.01.2004
