--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 13.01.2004
 - fixed connecting using HUB server to get Gadu-Gadu server IP address (gadu-gadu/krzak)
+- fixed description encoding when autoconnect if used (gadu-gadu/krzak)
 
 12.01.2004
 - really fixed segfault when resizing chat window in tabbed mode (GUI/THrull)
