--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+14.01.2004 - Released 2.0pre6
+
 14.01.2004
 - fixed msg_body_color variable saving (GUI/THrull)
 - fixes with reconnect and private mode (gadu-gadu/krzak)
