--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+15.01.2004
+- code cleanup (gadu-gadu/core/krzak)
+- write_line_to_file() try to create directory before creating file (core/krzak)
+
 14.01.2004 - Released 2.0pre6
 
 14.01.2004
