- "gui send userlist" relay on Repo walues, nos userlist send as parameter. - this is a start of migration for usage of Repo benefits with GUI, protocols mostly already use Repo synchronously with "userlist" list operations.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+16.01.2004
+- "gui send userlist" signal relay on Repo values, not userlist signal parameter (GUI/krzak)
+
 15.01.2004
 - code cleanup (gadu-gadu/core/krzak)
 - write_line_to_file() try to create directory before creating file (core/krzak)
