--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+17.01.2004
+- mass code indentation (shasta)
+- mass code cleanups - do not use C++-style comments (shasta)
+
 16.01.2004
 - "gui send userlist" signal relay on Repo values, not userlist signal parameter (GUI/krzak)
 
