--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 - mass code indentation (shasta)
 - mass code cleanups - do not use C++-style comments (shasta)
 - use repo [fixes disappearing userlist] (sms/shasta)
+- full repo support with contacts in Jabber protocol plugin (jabber/krzak)
 
 16.01.2004
 - "gui send userlist" signal relay on Repo values, not userlist signal parameter (GUI/krzak)
