--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 - mass code cleanups - do not use C++-style comments (shasta)
 - use repo [fixes disappearing userlist] (sms/shasta)
 - full repo support with contacts in Jabber protocol plugin (jabber/krzak)
+- ggadu_repo_key_from_string() that will create constat, unique key for string based value (core/krzak)
 
 16.01.2004
 - "gui send userlist" signal relay on Repo values, not userlist signal parameter (GUI/krzak)
