--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,9 @@
 - full repo support with contacts in Jabber protocol plugin (jabber/krzak)
 - ggadu_repo_key_from_string() that will create constat, unique key for string based value (core/krzak)
 - ggadu_convert() based macros change, now it return converted text so it's easer to use (core/all/krzak)
+- removed signals :
+  "auth request","auth request accepted","unauth request","unauth request accepted"
+  nobody really used it (GUI/tlen/krzak)
 
 16.01.2004
 - "gui send userlist" signal relay on Repo values, not userlist signal parameter (GUI/krzak)
