--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 18.01.2004
 - reordered buttons in chat window (GUI/krzak)
+- unable to change chat windows style (tabbed/classic) if there are any active sessions already (GUI/krzak)
 
 17.01.2004
 - mass code indentation (shasta)
