- AM stuff as it should be

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+19.01.2004
+- am/ac stuff (krzak)
+
 18.01.2004
 - reordered buttons in chat window (GUI/krzak)
 - unable to change chat windows style (tabbed/classic) if there are any active sessions already (GUI/krzak)
