--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 19.01.2004
 - am/ac stuff (krzak)
+- fixed segfault with gui_tree_add if no offline_status is declared (GUI/krzak)
 
 18.01.2004
 - reordered buttons in chat window (GUI/krzak)
