--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,13 @@
+23.01.2004
+- clear others description after disconnect (gadu-gadu/shasta)
+
 22.01.2004
 - fixed strange behaviour when tabbed chat window is closed and another 
-  one session is waiting in dock (GUI/krzak)
+  session is waiting in dock (GUI/krzak)
 - fixes with reconnect, and save last connected server IP (gadu-gadu/krzak)
 
 21.01.2004
-- clean'ups an memory leak fixes in ggadu_dialog_* (core/THrull)
+- cleanups and memory leakage fixes in ggadu_dialog_* (core/THrull)
 
 19.01.2004
 - am/ac stuff (krzak)
