clear ip field too

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 23.01.2004
-- clear others description after disconnect (gadu-gadu/shasta)
+- clear others description/ip after disconnect (gadu-gadu/shasta)
 
 22.01.2004
 - fixed strange behaviour when tabbed chat window is closed and another 
