--- a/po/pl.po
+++ b/po/pl.po
@@ -1,14 +1,14 @@
-# $Id: pl.po,v 1.42 2004/01/19 19:55:34 krzyzak Exp $
+# $Id: pl.po,v 1.43 2004/01/26 19:16:14 krzyzak Exp $
 # Copyright (C) 2003 GNU Gadu Team.
 # Igor Popik <thrull@slackware.pl>, 2003.
 msgid ""
 msgstr ""
 "Project-Id-Version: gg2 2.0_CVS\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: ggadu-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2004-01-19 00:32+0100\n"
 "PO-Revision-Date: 2003-03-19 19:16+0100\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Last-Translator: GNU Gadu Team\n"
+"Language-Team: GNU Gadu Team\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
