--- a/TODO
+++ b/TODO
@@ -1,21 +1,10 @@
 BEFORE 2.0:
- - userlist tree view doesn't expand/collapse rows while userlist changes (GUI)
- - applying theme should refresh everything (it's not doing that for menubar) (GUI)
+ - register new account (tlen/jabber)
+ - current status description text somewhere
  ? some kind of dcc get acknowledge dialog box (gadu-gadu)
 
 Later:
-- current status description text somewhere
-- memory leaks audit (all)
-- jabber confference (jabber)
-
-(done) - "gui show invisible chats" opens new windows. they should grab focus into 'input'. (GUI)
-(done)- Jabber SSL
-(done)- sound configuration (all)
-(done)- authorization dialogs (jabber/tlen)
-(done)- docklet menu (??)
-(done)- jabber search (jabber)
-(done)- docklet should work in wmaker as dockapp (docklet)
-(done)- status caption not necessary in utf8 (gadu-gadu)
-(done)- plugin docklet cant core dump if there is no gui-gtk2 plugin (docklet)
-(done)- scrolled emoticons window
-(done)- auto-away
+ - userlist tree view doesn't expand/collapse rows while userlist changes (GUI)
+ - applying theme should refresh everything (it's not doing that for menubar) (GUI)
+ - memory leaks audit (all)
+ - conference (jabber)
