--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 27.01.2004
 - hopefully fixed '<unknown>' on some panels with window groupping turned on (core/shasta)
+- tootips on protocol status icons (GUI/THrull)
 
 26.01.2004
 - added ability to register new gadu-gadu account [uses threads] (gadu-gadu/shasta)
