- jabber account registration available

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+02.02.2004
+- new account registration available with Jabber (jabber/krzak)
+
 01.02.2004
 - jabber plugin adapted to work witch changed API of loudmouth library (krzak/jabber)
 
