--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+10.02.2004
+- dialog.c api change process... it's to hard to change it everywhere at one time (krzak)
+
 09.02.2004
 - ggadu_dialog_* API change, not finished yet. (krzak/core)
 - "gui add user window" and "gui change user window" signals are deprecated. (krzak)
