--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+14.02.2004
+- "add user" & "change user" signals are now working... (sms/THrull)
+
 13.02.2004
 - smashed nasty bug in sms plugin & started to move towards new dialog API (sms/THrull)
 - some code cleanups (jabber/THrull)
