--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 14.02.2004
+- systray code cleanups (docket/systray/THrull)
 - "add user" & "change user" signals are now working... (sms/THrull)
 
 13.02.2004
