. wywalenie "gui add user window" and "gui change user window"

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 14.02.2004
 - systray code cleanups (docket/systray/THrull)
 - "add user" & "change user" signals are now working... (sms/THrull)
+- "gui add user window" and "gui change user window" are no longer avilable (krzak)
 
 13.02.2004
 - smashed nasty bug in sms plugin & started to move towards new dialog API (sms/THrull)
