--- a/po/pl.po
+++ b/po/pl.po
@@ -1,4 +1,4 @@
-# $Id: pl.po,v 1.46 2004/01/28 23:59:36 shaster Exp $
+# $Id: pl.po,v 1.47 2004/02/14 13:12:44 thrulliq Exp $
 # Copyright (C) 2003 GNU Gadu Team.
 # Igor Popik <thrull@slackware.pl>, 2003.
 msgid ""
@@ -420,22 +420,22 @@ msgid "About"
 msgstr "Informacje o"
 
 #: src/plugins/GUI/gui_dialogs.c:700
-#, c-format
+#, fuzzy, c-format
 msgid ""
 "<b>GNU Gadu %s</b>\n"
-"Copyright (C) 2001-2004 GNU Gadu Team\n"
+"Copyright (C) 2001-2003 GNU Gadu Team\n"
 "License: GPL\n"
 "Homepage: http://www.gadu.gnu.pl/\n"
 "\n"
 "<b>Main Programmers:</b>\n"
 "Igor Popik &lt;thrull@slackware.pl&gt;\n"
 "Marcin Krzyzanowski &lt;krzak@hakore.com&gt;\n"
-"Jakub 'shasta' Jankowski\n"
 "\n"
 "<b>Also:</b>\n"
 "Bartosz Zapalowski\n"
 "Mateusz Papiernik\n"
 "HelDoRe\n"
+"Jakub 'shasta' Jankowski\n"
 "Pawel Jan Maczewski\n"
 "\n"
 "<b>Thanks to:</b>\n"
