--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 17.02.2004
 - gadu-gadu protocol use repo since now (krzak/gadu-gadu)
+- repo.{c,h} -> ggadu_repo.{c,h} (krzak)
+- support.{c,h} -> ggadu_support.{c,h} (krzak)
+- menu.{c,h} -> ggadu_menu.{c,h} (krzak)
 
 15.02.2004
 - GGaduMsg_free usage (krzak/GUI/gadu-gadu)
