--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
 - support.{c,h} -> ggadu_support.{c,h} (krzak)
 - menu.{c,h} -> ggadu_menu.{c,h} (krzak)
 - enable "blink" by default (krzak/GUI)
+- memleak in gui_user_view_clear (krzak/GUI)
 
 15.02.2004
 - GGaduMsg_free usage (krzak/GUI/gadu-gadu)
