--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+21.02.2004
+- fixed row expanding in tree view when updating userlist (THrull/GUI)
+- small translations & POTFILE.in updates (THrull)
+
 18.02.2004
 - if you configure for external sound plugin only, it will build now. (Pav Lucistni)
 
