--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 21.02.2004
+- Released 2.0pre7
+
+21.02.2004
 - fixed row expanding in tree view when updating userlist (THrull/GUI)
 - small translations & POTFILE.in updates (THrull)
 
