the "Shift + Enter" thing in chat window :-)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+26.02.2004
+- Shift + Enter does not send a message even if "Send on enter" option is enabled (THrull/GUI)
+
 22.02.2004
 - additional emoticons definitions for Tlen (gotar)
 
