http://www.gnugadu.org

--- a/po/pl.po
+++ b/po/pl.po
@@ -1,10 +1,10 @@
-# $Id: pl.po,v 1.50 2004/02/29 23:43:35 thrulliq Exp $
+# $Id: pl.po,v 1.51 2004/03/09 10:31:39 krzyzak Exp $
 # Copyright (C) 2003 GNU Gadu Team.
 # Igor Popik <thrull@slackware.pl>, 2003.
 msgid ""
 msgstr ""
 "Project-Id-Version: gg2 2.0_CVS\n"
-"Report-Msgid-Bugs-To: http://www.gadu.gnu.pl/\n"
+"Report-Msgid-Bugs-To: http://www.gnugadu.org/\n"
 "POT-Creation-Date: 2004-03-01 00:44+0100\n"
 "PO-Revision-Date: 2003-03-19 19:16+0100\n"
 "Last-Translator: GNU Gadu Team\n"
@@ -426,7 +426,7 @@ msgid ""
 "<b>GNU Gadu %s</b>\n"
 "Copyright (C) 2001-2004 GNU Gadu Team\n"
 "License: GPL\n"
-"Homepage: http://www.gadu.gnu.pl/\n"
+"Homepage: http://www.gnugadu.org/\n"
 "\n"
 "<b>Main Programmers:</b>\n"
 "Igor Popik &lt;thrull@slackware.pl&gt;\n"
@@ -452,7 +452,7 @@ msgstr ""
 "<b>GNU Gadu %s</b>\n"
 "Copyright (C) 2001-2004 GNU Gadu Team\n"
 "Licencja: GPL\n"
-"Strona domowa: http://www.gadu.gnu.pl\n"
+"Strona domowa: http://www.gnugadu.org\n"
 "\n"
 "<b>G³ówni programi¶ci:</b>\n"
 "Igor Popik &lt;thrull@slackware.pl&gt;\n"
