--- a/po/gg2.pot
+++ b/po/gg2.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: http://www.gadu.gnu.pl/\n"
+"Report-Msgid-Bugs-To: http://www.gnugadu.org/\n"
 "POT-Creation-Date: 2004-03-01 00:44+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
@@ -396,7 +396,7 @@ msgid ""
 "<b>GNU Gadu %s</b>\n"
 "Copyright (C) 2001-2004 GNU Gadu Team\n"
 "License: GPL\n"
-"Homepage: http://www.gadu.gnu.pl/\n"
+"Homepage: http://www.gnugadu.org/\n"
 "\n"
 "<b>Main Programmers:</b>\n"
 "Igor Popik &lt;thrull@slackware.pl&gt;\n"
