--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 BEFORE 2.0:
- - register new account (tlen/jabber)
+ - register new account (tlen)
  - current status description text somewhere
- ? some kind of dcc get acknowledge dialog box (gadu-gadu)
+ !!! some kind of dcc get acknowledge dialog box (gadu-gadu)
 
 Later:
  - userlist tree view doesn't expand/collapse rows while userlist changes (GUI)
