--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+12.03.2004
+- avoid ,,(null)'' when changing contact's info (gadu-gadu/shasta)
+- build process fixes (shasta)
+
 09.03.2004
 - http://www.gnugadu.org (krzak)
 - gtkspell support in GUI plugin (Krzysztof Smigrodzki)
