--- a/README
+++ b/README
@@ -16,7 +16,8 @@ WARNING: perl support and remote plugin will compile/work only on Linux!
 Read doc/problems and other documentation files BEFORE submitting ANY
 bugreports.
 
-Important :
+Important:
 
-    If you accidentally will make something wrong with list of plugins to be loaded,
-    you can remove file $HOME/.gg2/modules.load and start GNU Gadu that will load all available plugins.
+    If you accidentally do something wrong with list of plugins to be loaded,
+    try removing $HOME/.gg2/modules.load and restart GNU Gadu so it will load 
+    all available plugins.
