--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+13.03.2004
+- gtkspell configuration (Krzysztof Smigrodzki)
+
 12.03.2004
 - avoid ,,(null)'' when changing contact's info (gadu-gadu/shasta)
 - build process fixes (shasta)
