--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+14.03.2004
+- 2.0pre8
+
 13.03.2004
 - gtkspell configuration (Krzysztof Smigrodzki)
 - fixed some stuff with status prototypes registration and visualization (GUI/sms/krzak)
