--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 14.03.2004
 - 2.0pre8
+- show/hide descriptions on userlist button - needs nicer button pixmap! (GUI/THrull)
 
 13.03.2004
 - gtkspell configuration (Krzysztof Smigrodzki)
