--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+15.03.2004
+- 'Close' button in classic chat (without tabs) will hide chat window (GUI/THrull)
+
 14.03.2004
 - 2.0pre8
 - show/hide descriptions on userlist button - needs nicer button pixmap! (GUI/THrull)
