--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+28.03.2004
+- close http://bugs.gnugadu.org/?do=details&id=12 [focus related issue] (krzak/GUI)
+
 27.03.2004
 - fixed HOME_ETC support, removed CONFIG_DIR support (krzak/all)
 
