- dcc ack dialog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+30.03.2004
+- dcc ack message (gadu-gadu/thrull/krzak)
+
 28.03.2004
 - close http://bugs.gnugadu.org/?do=details&id=12 [focus related issue] (krzak/GUI)
 
