--- a/AUTHORS
+++ b/AUTHORS
@@ -71,3 +71,4 @@ update
 Aflinta      - gettext patch, testing
 Dwuziu       - testing
 Piotr Smyrak - FreeBSD stuff
+Mateusz Maliszewski - icons and testing.
