- fixes, libgadu related/

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+07.04.2004
+- fixes in build process (gadu-gadu/krzak)
+
 02.04.2004
 - some changes in chat window button placement (GUI/THrull)
 - keyboard support in userlist - chat init, key up, key down (GUI/THrull)
