--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+18.04.2004
+- improved contacts sort (GUI/krzak)
+
 07.04.2004
 - fixes in build process (gadu-gadu/krzak)
 - fixed problem with disappearing chat windows without any docklet plugin active (GUI/THrull)
