- do not show tabs if there is only one

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1.05.2004
+- do not show tabs if there is only one on the protocols list (krzak)
+- Poland join to UE
+
 22.04.2004
 - release 2.0.1
 
