--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
-3.05.2004
+03.05.2004
 - fixed crash, introduced with last sort changes , after switch to tree mode,  (krzak)
+- there is no such file : pechowiec.gif (krzak)
+- release 2.0.2
 
-1.05.2004
+01.05.2004
 - do not show tabs if there is only one on the protocols list (krzak)
 - Poland join to UE
 
