--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 04.05.2004
 - ";" at the end of gadu-gadu userlist (krzak)
+- removed unified-types.h and included into new ggadu_types.h (krzak)
 
 03.05.2004
 - fixed crash, introduced with last sort changes , after switch to tree mode,  (krzak)
