--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+05.05.2004
+- g_get_tmp_dir() used for register-token.tmp file (gadu-gadu/krzak)
+
 04.05.2004
 - ";" at the end of gadu-gadu userlist (krzak)
 - removed unified-types.h and included into new ggadu_types.h (krzak)
