--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 06.05.2004
+- removing users now requires confirmation (gadu-gadu/jabber/THrull)
 - firstsound.patch by emes (GUI/emes)
 
 05.05.2004
