. replace description and status order on chat window

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+18.05.2004
+- replace description and status message on chat window (gui/krzak)
+
 17.05.2004
 - reorganisation menu order suggested by Piotr Smyrak (gadu/tlen/jabber/krzak)
 
