fixed chat window latency with emots... bug #15

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+25.05.2004
+- fixed chat window latency with emoticons turned on (GUI/THrull)
+
 21.05.2004
 - filter out transports entries from the list (jabber/krzak)
 
