- dockapp plugin update and improvements by Krzysztof Guc <linusklan at o2.pl>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+30.05.2004
+- dockapp plugin update and improvements by Krzysztof Guc <linusklan at o2.pl>
+
 29.05.2004
 - heyah! i'm back (sms/shasta)
 
