- clear button added to chat window

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+02.06.2004
+- "clear" button added to chat window (GUI/krzak)
+
 30.05.2004
 - dockapp plugin update and improvements by Krzysztof Guc <linusklan at o2.pl>
 
