- Dutch translation of GNU Gadu by Sander Devrieze

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+06.06.2004
+- Dutch translation of GNU Gadu, thanks Sander Devrieze.
+
 02.06.2004
 - "clear" button added to chat window (GUI/krzak)
 
