--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+10.06.2004
+- --without-openssl disable OpenSSL support with included libgadu (krzak)
+
 08.06.2004
 - emoticons window is not created every time, only once in every chat window. (krzak/GUI)
   ( http://bugs.gnugadu.org/index.php?do=details&id=41 )
