--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 11.06.2004
 - timestamping notices (GUI/shasta)
+- emoticons.def updated and fixed by Przemyslaw Grzegorczyk <fran86 o2.pl>
 
 10.06.2004
 - --without-openssl disable OpenSSL support with included libgadu (krzak)
