--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+12.06.2004
+- added gg2-devel.SlackBuild, script for building Slackware binary
+  packages directly from CVS sources (shasta)
+
 11.06.2004
 - timestamping notices (GUI/shasta)
 - emoticons.def updated and fixed by Przemyslaw Grzegorczyk <fran86 o2.pl>
