--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 12.06.2004
 - added gg2-devel.SlackBuild, script for building Slackware binary
   packages directly from CVS sources (shasta)
+- history file format compatible with Kadu format by <kazik.cz interia.pl> (gadu-gadu/krzak)
 
 11.06.2004
 - timestamping notices (GUI/shasta)
