--- a/AUTHORS
+++ b/AUTHORS
@@ -44,6 +44,7 @@ Docklet
 Dockapp
 		: emvi			<wamarek@poczta.onet.pl>
 		: Jaroslaw Wypychowski	<jarwyp@7bulls.com>
+		: Krzysztof Guc		<linusklan@o2.pl>
 
 XOSD 		
 		: Marcin Krzy¿anowski	<krzak@linux.net.pl>
