- notify about status changed fixed by Slawek Mikula (zorba <at> silesianet.pl) (tlen)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+21.06.2004
+- notify about status changed fixed by Slawek Mikula (zorba <at> silesianet.pl) (tlen)
+
 16.06.2004
 - proxy support for jabber plugin (patch by jakub.ambrozewicz gazeta.pl)
 
