- fixed "clear" button in tabbed chat mode (#51) by Przemys³aw Grzegorczyk <fran86 o2.pl>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+25.06.2004
+- fixed "clear" button in tabbed chat mode (#51) by Przemys³aw Grzegorczyk <fran86 o2.pl>
+
 21.06.2004
 - notify about status changed fixed by Slawek Mikula (zorba <at> silesianet.pl) (tlen)
 
