--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+29.06.2004
+- Tooltips for chat window buttons by Przemyslaw Grzegorczyk <fran86 o2.pl>
+
 28.06.2004
 - fixed removing +48/0 prefixes from phone number [closes #55] (sms/shasta)
 - icons for subscriptions "from" and "none", and menu descriptions changed (jabber/krzak)
