--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+21.07.2004
+- fixed detecting 'service not activated' at IDEA GSM (sms/shasta)
+
 29.06.2004
 - Tooltips for chat window buttons by Przemyslaw Grzegorczyk <fran86 o2.pl>
 
