- history prototype in contrib

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 01.08.2004
 - ggadu_save_history() as a base for history in every plugin, to keep similar
   history format
+- contrib/gghist nice history viewer prototype send by Kazik <kazik.cz@interia.pl>
   
 28.07.2004
 - fixed fd leak (sound-oss/HelDoRe)
